# myconf

./: .gitignore  .gitmodules  CLAUDE.md  README.md  Xresources  alacritty.yml  bashrc  clang-format  clangd  common.sh  gitconfig  init.vim  install.conf.yaml  kitty.conf  local-kitty.conf.sample  local-plugins.vim.sample  local-sway.conf.sample  local.sh.sample  local.vim.sample  setup.sh  tmux  tmux.conf  vimrc  zshrc
configs/: 20-debug-probe.rules  90-keychron-q0p.rules  99-synaptics-overrides.conf
docs/: building-nvim.md  building-vim.md  commands.md  cscope.md  globbing.md  i3.md  podman.md  xconfig.md
lua/: func.lua  generate-theme.lua  theme.lua
neovim/: CLAUDE.md  helpers.vim  init.vim  plugins.vim  settings.vim  tags
neovim/after/: init.vim
neovim/doc/: my-usage.txt  tags
neovim/lua/: .luarc.json  color.lua  config-dap.lua  config-lsp.lua  config-treesitter.lua  config-utils.lua  config.lua  highlights.lua  lush-theme.lua  mini-theme.lua  my-init.lua  smart-yank.lua
neovim/templates/: skeleton.md
neovim/tests/: integration_test.lua  smart_yank_spec.lua
scripts/: color-test.lua  image-builder.py  llm-ingest.sh  ti4-randomizer.py  ti4.py
sway/: config
sway/config.d/: input.config  keybinding.config
templates/cpp-cmake/: cookiecutter.json
templates/cpp-cmake/{{cookiecutter.project_slug}}/: .clang-format  .clangd  .editorconfig  CMakeLists.txt  Makefile  README.md
templates/cpp-cmake/{{cookiecutter.project_slug}}/src/: main.cpp
templates/nvim-plugin/: cookiecutter.json
vim/: .VimballRecord  clang-format.py
xdg/ghostty/: config.ghostty  (+1 more)
(+23 files in other folders)
